# seek-takehome

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/traffic_counter/: __init__.py  main.py  parser.py  processor.py
tests/: conftest.py  test_parser.py  test_processor.py
